# fishtool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
aicard/brains/models/: __init__.py
aicard/brains/spaces/: go_fish.py
aicard/deck/: __init__.py  card.py  deck.py
aicard/environment/: go_fish.py
aicard/game/: __init__.py  events.py  go_fish.py  run.py  states.py
aicard/games/: README.md  run.py
aicard/games/config/: go_fish.ini
aicard/games/core/: __init__.py  card.py  card_builder.py  deck.py  deck_builder.py  events.py
aicard/games/go_fish/: __init__.py  game.py  state.py  states.py
aicard/player/: __init__.py  generic.py  go_fish.py
aicard/players/: base.py  go_fish.py
aicard/policy/: __init__.py  random_policy.py
aicard/space/: __init__.py  go_fish.py
card_player/deck/: __init__.py  card.py  deck.py
card_player/environment/: go_fish.py
card_player/game/: __init__.py  events.py  run.py  states.py
card_player/player/: __init__.py  generic.py  go_fish.py
card_player/policy/: __init__.py  policy.py
card_player/space/: __init__.py  go_fish.py
cartomancy/: __init__.py
cartomancy/games/: README.md
cartomancy/players/: go_fish.py  magnum_opus.py
config/go_fish/: random.yaml
config/magnum_opus/: random.yaml
motherbrain/: __init__.py
motherbrain/games/: run.py
motherbrain/players/: go_fish.py  magnum_opus.py
scripts/: new_game.sh  play.py  test.py
scripts/templates/: players.txt
tests/: test_deal.py  test_deck.py  test_go_fish_game.py
tests/test_engine/: test_loading.py  test_slow_text.py
(+69 files in other folders)
